--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="{{ url_for('static',
       filename='css/app.css')}}">
       <link rel="stylesheet"
-            href="https://use.fontawesome.come/releases/v5.2.0/css/all.css">
+            href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
   </head>
   <body>
     <div class="container top">
