--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -1,3 +1,6 @@
+<!-- import both flask macros to generate content  -->
+{% from '_macros' import show_job, show_jobs with context %}
+
 <!doctype html>
 <html>
   <head>
