display all jobs

--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -1,5 +1,6 @@
 <!-- flask will pull the data from db - job is a parameter for macro -->
-{% macro show_job(job)
+
+{% macro show_job(job) %}
 <div class="card adjust-height">
   <header class="card-header">
     <p class="card-header-title">
