display all jobs

--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -21,7 +21,7 @@
 {% endmacro %}
 
 <!-- another macro will loop through all the jobs -->
-{$ macro show_jobs(jobs) %}
+{% macro show_jobs(jobs) %}
 <div class="'columns is-multiline">
     {% for job in jobs %}
     <div class="column is-half">
