display all jobs

--- a/jobs/templates/layout.html
+++ b/jobs/templates/layout.html
@@ -1,5 +1,5 @@
 <!-- import both flask macros to generate content  -->
-{% from '_macros' import show_job, show_jobs with context %}
+{% from '_macros.html' import show_job, show_jobs with context %}
 
 <!doctype html>
 <html>
