--- a/jobs/templates/_macros.html
+++ b/jobs/templates/_macros.html
@@ -22,12 +22,14 @@
 
 <!-- another macro will loop through all the jobs -->
 {% macro show_jobs(jobs) %}
-<div class="'columns is-multiline">
-    {% for job in jobs %}
+<div class="columns is-multiline">
+  {% for job in jobs %}
     <div class="column is-half">
-        {{ show_job(job) }}
+      {{ show_job(job) }}
     </div>
-    {% endfor %}
+  {% endfor %}
+
 </div>
 {% endmacro %}
+
 
