display individual job

--- a/jobs/templates/index.html
+++ b/jobs/templates/index.html
@@ -1,4 +1,6 @@
 {% extends "layout.html" %}
+
+<!-- all this below will go into block content of base layout.html template  -->
 {% block content %}
   <div class="columns">
     <div class="column">
